2006-09-01  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* src/gui/serverdialog.cpp, src/gui/serverdialog.h, src/net/network.h:
	Fixed some header issues.
	* The Mana World.dev, tmw.cbp: Updated project files.

2006-08-30  Yohann Ferreira  <bertram@cegetel.net>

	* src/main.cpp, src/main.h, src/Makefile.am, src/gui/connection.h,
	src/gui/connection.cpp, src/gui/serverdialog.cpp,
	src/gui/serverdialog.h: Added a first version of the server dialog
	with an unskinned dropdown. Upgraded also the connection window a bit
	to handle Cancelling more gracefully.

2006-08-27  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/engine.cpp, src/gui/gui.cpp: Fixed merge issues: printfs and
	inconsistency between view and camera variables. Fixed lazy scrolling:
	there is no "freaking out" when the correct function is used.

2006-08-28  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/gui.cpp: Fixed crash when map is not loaded yet.
	* src/net/beinghandler.cpp, src/net/protocol.h: Added support for
	entering monsters.

2006-08-28  Philipp Sehmisch  <tmw@crushnet.org>

	* src/gui/setup_video.cpp: Modified the ranges of the ScrollLaziness
	and ScrollRadius sliders.

2006-08-28  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/graphics/items/*: Changed svn properties.
	* data/graphics/sprites/item001.xml, data/graphics/sprites/item002.xml,
	data/graphics/sprites/item003.xml, data/graphics/sprites/item004.xml,
	data/graphics/sprites/item005.xml, data/graphics/sprites/item006.png,
	data/graphics/sprites/item006.xml, data/graphics/sprites/Makefile.am:
	Added headband and fixed svn properties.

2006-08-27  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/localplayer.cpp, src/net/protocol.h: Send move message
	whenever a destination is selected.
	* src/beinghandler.cpp: Smoothed being trajectories.
	* src/localplayer.cpp, src/game.cpp, src/map.cpp, src/gui/gui.cpp,
	src/engine.cpp, src/beingmanager.cpp, src/being.cpp, src/being.h,