@@ -37,8 +37,8 @@
 
 LocalPlayer *player_node = NULL;
 
-LocalPlayer::LocalPlayer(Uint32 id, Uint16 job, Map *map):
-    Player(id, job, map),
+LocalPlayer::LocalPlayer():
+    Player(65535, 0, NULL),
     mLevel(1),
     mInventory(new Inventory()),
     mTarget(NULL), mPickUpTarget(NULL),
